Updated Python code

--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Einfache Portfolio-Website</h1>
-            <p>Ein leidenschaftlicher Webentwickler, der schöne und funktionale Websites erstellt.</p>
+            <h1>Einfache Portfolio</h1>
+            <p>Über 10 Jahre Erfahrung in Product Ownership, Business Analysis und SEO – mein aktueller Fokus: KI-gestützte Lösungen.</p>
             <a href="#projects" class="btn">Meine Arbeit ansehen</a>
         </div>
     </section>
@@ -341,9 +341,11 @@
             <h2 class="section-title">Über mich</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Im Rahmen meiner Umschulung erstelle ich eine einfache Portfolio-Website, um meine Fähigkeit zur Webentwicklung zu präsentieren.</p>
-                    <p>Die Seite ist responsiv und suchmaschinenoptimiert (SEO).</p>
-                    <p>Wenn Sie den Eindruck haben, dass meine Arbeit professionell wirkt, zögern Sie nicht, mich für eine Zusammenarbeit zu kontaktieren.</p>
+                    <p><p><u><b>Im Rahmen meiner Umschulung erstelle ich eine einfache Portfolio-Website</b></u></p>
+                    <BR>
+                    <p>Mit über 10 Jahren Erfahrung in <b>Product Ownership</b> und <b>Business Analysis</b> unterstütze ich Unternehmen bei der strategischen Entwicklung digitaler Produkte. Ich verbinde Nutzerbedürfnisse mit klaren Geschäftsanforderungen und sorge dafür, dass Produkte gezielt und effizient weiterentwickelt werden.</p>
+                    <BR><p>Mein aktueller Fokus liegt auf der Integration von <b>KI-gestützten Ansätzen</b>, um Produkte intelligenter zu gestalten und Prozesse zu optimieren.</p>
+                    <p>Zusätzlich bringe ich fundiertes Know-how im <b>SEO-Management</b> ein, um die digitale Sichtbarkeit zu erhöhen und nachhaltigen Mehrwert zu schaffen.</p>
                 </div>
                 <div class="about-image">
                     <img src="https://i.ibb.co/r2Y5JRW4/image.jpg" alt="Profile" width="300" height="320" >
@@ -445,7 +447,7 @@
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
-            <p>&copy; 2023 MyPortfolio. All rights reserved.</p>
+            <p><p>Made by Gift Anthony &copy; 2025</p></p>
         </div>
     </footer>
 
