--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                     <p>Zusätzlich bringe ich fundiertes Know-how im <b>SEO-Management</b> ein, um die digitale Sichtbarkeit zu erhöhen und nachhaltigen Mehrwert zu schaffen.</p>
                 </div>
                 <div class="about-image">
-                    <img src="https://i.ibb.co/r2Y5JRW4/image.jpg" alt="Profile" width="300" height="320" >
+                    <img src="https://i.imgur.com/w5td7rA.jpeg" alt="Profile" width="300" height="350" >
                 </div>
             </div>
         </div>
