--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mein Portfolio</title>
+    <title>Optimal Compass</title>
     <style>
         /* Reset and Base Styles */
         * {
@@ -311,7 +311,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">Mein Portfolio</div>
+                <div class="logo">Optimal Compass</div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">Über mich</a></li>
