--- a/index.html
+++ b/index.html
@@ -361,23 +361,23 @@
             <div class="skills-container">
                 <div class="skill">
                     <i class="fab fa-html5"></i>
-                    <h3>HTML5</h3>
-                    <p>Semantische Auszeichnung, Zugänglichkeit, SEO-Optimierung</p>
+                    <h3>HTML5 / CSS3</h3>
+                    <p>Struktur, Funktion, Design</p>
                 </div>
                 <div class="skill">
                     <i class="fab fa-css3-alt"></i>
-                    <h3>CSS3</h3>
-                    <p>Responsives Design, Animationen, Flexbox/Grid</p>
+                    <h3>Jira uvm.</h3>
+                    <p>Project management tool</p>
                 </div>
                 <div class="skill">
                     <i class="fab fa-js"></i>
                     <h3>JavaScript</h3>
-                    <p>ES6+, DOM-Manipulation, asynchrone Programmierung</p>
+                    <p>Interactive Web Development</p>
                 </div>
                 <div class="skill">
                     <i class="fab fa-react"></i>
-                    <h3>React</h3>
-                    <p>Komponentenbasierte Architektur, Hooks, Context-API</p>
+                    <h3>Python / Pycharm</h3>
+                    <p>KI-gestützte Lösungen & API</p>
                 </div>
             </div>
         </div>
