--- a/index.html
+++ b/index.html
@@ -391,16 +391,16 @@
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 1">
                     <div class="project-info">
-                        <h3>E-commerce Website</h3>
-                        <p>Eine vollständig responsive und suchmaschinenoptimierte Online-Shop-Seite mit Warenkorb-Funktion und Zahlungsintegration.</p>
+                        <h3>Product Owner</h3>
+                        Ich analysiere Anforderungen, definiere die Produktvision und priorisiere das Backlog, um den Produktwert zu maximieren. Durch enge Zusammenarbeit mit Stakeholdern und cross-funktionalen Teams stelle ich sicher, dass das Produkt den Marktbedürfnissen entspricht. <BR><BR>Mit agilen Methoden und datengestützten Entscheidungen strebe ich stets an, Mehrwert für das Unternehmen zu schaffen.
                         <a href="#" class="btn">Projekt ansehen</a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 2">
                     <div class="project-info">
-                        <h3>Aufgabenverwaltungs-App</h3>
-                        <p>Eine Produktivitätsanwendung zur Organisation und Verfolgung täglicher Aufgaben.</p>
+                        <h3>Website & E-Commerce </h3>
+                        <p>Komplette moderne Website- und E-Commerce-Lösungen, sowohl im Frontend als auch im Backend, inklusive ERP-Integration. <BR><BR>Wir bieten intelligente KI-Automatisierung, die Geschäftsprozesse effizient optimiert und Ihr Unternehmen zukunftssicher macht. Durch maßgeschneiderte Lösungen steigern wir die Benutzererfahrung und verbessern die Leistung..</p>
                         <a href="#" class="btn">Projekt ansehen</a>
                     </div>
                 </div>
