--- a/index.html
+++ b/index.html
@@ -329,23 +329,23 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Einfache Portfolio</h1>
-            <p>Über 10 Jahre Erfahrung in Product Ownership, Business Analysis und SEO – mein aktueller Fokus: KI-gestützte Lösungen.</p>
-            <a href="#projects" class="btn">Meine Arbeit ansehen</a>
+            <h1>Simple Portfolio</h1>
+            <p>Over 10 years of experience in Product Ownership, Business Analysis, and SEO – my current focus: AI-powered solutions.</p>
+            <a href="#projects" class="btn">View my work</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="section">
         <div class="container">
-            <h2 class="section-title">Über mich</h2>
+            <h2 class="section-title">About me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p><p><u><b>Im Rahmen meiner Umschulung erstelle ich eine einfache Portfolio-Website</b></u></p>
+                    <p><p><u><b>As part of my retraining, I am creating a simple portfolio website.</b></u></p>
                     <BR>
-                    <p>Mit über 10 Jahren Erfahrung in <b>Product Ownership</b> und <b>Business Analysis</b> unterstütze ich Unternehmen bei der strategischen Entwicklung digitaler Produkte. Ich verbinde Nutzerbedürfnisse mit klaren Geschäftsanforderungen und sorge dafür, dass Produkte gezielt und effizient weiterentwickelt werden.</p>
-                    <BR><p>Mein aktueller Fokus liegt auf der Integration von <b>KI-gestützten Ansätzen</b>, um Produkte intelligenter zu gestalten und Prozesse zu optimieren.</p>
-                    <p>Zusätzlich bringe ich fundiertes Know-how im <b>SEO-Management</b> ein, um die digitale Sichtbarkeit zu erhöhen und nachhaltigen Mehrwert zu schaffen.</p>
+                    <p>With over 10 years of experience in <b>Product Ownership</b> and <b>Business Analysis</b>, I help companies strategically develop digital products. I connect user needs with clear business requirements and ensure that products are developed efficiently and purposefully.</p>
+                    <BR><p>My current focus is on integrating <b>AI-powered approaches</b> to make products smarter and optimize processes.</p>
+                    <p>Additionally, I bring extensive expertise in <b>SEO management</b> to enhance digital visibility and create sustainable value.</p>
                 </div>
                 <div class="about-image">
                     <img src="https://i.imgur.com/w5td7rA.jpeg" alt="Profile" width="300" height="385" >
@@ -357,16 +357,16 @@
     <!-- Skills Section -->
     <section id="skills" class="section skills">
         <div class="container">
-            <h2 class="section-title">Meine Fähigkeiten</h2>
+            <h2 class="section-title">My Skills</h2>
             <div class="skills-container">
                 <div class="skill">
                     <i class="fab fa-html5"></i>
                     <h3>HTML5 / CSS3</h3>
-                    <p>Struktur, Funktion, Design</p>
+                    <p>Structure, Function, Design</p>
                 </div>
                 <div class="skill">
                     <i class="fab fa-css3-alt"></i>
-                    <h3>Jira uvm.</h3>
+                    <h3>Jira & more</h3>
                     <p>Project management tool</p>
                 </div>
                 <div class="skill">
@@ -377,7 +377,7 @@
                 <div class="skill">
                     <i class="fab fa-react"></i>
                     <h3>Python / Pycharm</h3>
-                    <p>KI-gestützte Lösungen & API</p>
+                    <p>AI-powered solutions & API</p>
                 </div>
             </div>
         </div>
@@ -392,7 +392,7 @@
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 1">
                     <div class="project-info">
                         <h3>Product Owner</h3>
-                        Ich analysiere Anforderungen, definiere die Produktvision und priorisiere das Backlog, um den Produktwert zu maximieren. Durch enge Zusammenarbeit mit Stakeholdern und cross-funktionalen Teams stelle ich sicher, dass das Produkt den Marktbedürfnissen entspricht. <BR><BR>Mit agilen Methoden und datengestützten Entscheidungen strebe ich stets an, Mehrwert für das Unternehmen zu schaffen.
+                        I analyze requirements, define the product vision, and prioritize the backlog to maximize product value. Through close collaboration with stakeholders and cross-functional teams, I ensure the product meets market needs.<br><br>Using agile methodologies and data-driven decisions, I consistently strive to create added value for the company.
                         <a href="#" class="btn">Projekt ansehen</a>
                     </div>
                 </div>
@@ -400,14 +400,14 @@
                     <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 2">
                     <div class="project-info">
                         <h3>Website & E-Commerce </h3>
-                        <p>Komplette moderne Website- und E-Commerce-Lösungen, sowohl im Frontend als auch im Backend, inklusive ERP-Integration. <BR><BR>Wir bieten intelligente KI-Automatisierung, die Geschäftsprozesse effizient optimiert und Ihr Unternehmen zukunftssicher macht. Durch maßgeschneiderte Lösungen steigern wir die Benutzererfahrung und verbessern die Leistung..</p>
+                        <p>Complete modern website and e-commerce solutions, both frontend and backend, including ERP integration<br><br>We offer intelligent AI automation that efficiently optimizes business processes and future-proofs your company. With tailored solutions, we enhance user experience and improve performance.</p>
                         <a href="#" class="btn">Projekt ansehen</a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1559028012-481c04fa702d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 3">
                     <div class="project-info">
-                        <h3>Alle meine Arbeiten</h3>
+                        <h3>My Work</h3>
                         <p>Hier finden Sie alle meine Arbeiten für meine bisherigen Kunden sowie das Design, das wir Ihnen anbieten können.</p>
                         <a href="#" class="btn">Projekt ansehen</a>
                     </div>
