--- a/index.html
+++ b/index.html
@@ -391,25 +391,25 @@
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 1">
                     <div class="project-info">
-                        <h3>Product Owner</h3>
-                        I analyze requirements, define the product vision, and prioritize the backlog to maximize product value. Through close collaboration with stakeholders and cross-functional teams, I ensure the product meets market needs.<br><br>Using agile methodologies and data-driven decisions, I consistently strive to create added value for the company.
+                        <h3>Product Owner</h3><BR>
+                        I analyze requirements, define the product vision, and prioritize the backlog to maximize product value. Through close collaboration with stakeholders and cross-functional teams, I ensure the product meets market needs.<br><br>Using agile methodologies and data-driven decisions, I consistently strive to create added value for the company.</p><BR>
                         <a href="#" class="btn">Projekt ansehen</a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 2">
                     <div class="project-info">
-                        <h3>Website & E-Commerce </h3>
+                        <h3>Website & E-Commerce </h3><BR>
                         <p>Complete modern website and e-commerce solutions, both frontend and backend, including ERP integration<br><br>We offer intelligent AI automation that efficiently optimizes business processes and future-proofs your company. With tailored solutions, we enhance user experience and improve performance.</p>
-                        <a href="#" class="btn">Projekt ansehen</a>
+                        <BR><a href="#" class="btn">Projekt ansehen</a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1559028012-481c04fa702d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 3">
                     <div class="project-info">
-                        <h3>My Work</h3>
-                        <p>Hier finden Sie alle meine Arbeiten für meine bisherigen Kunden sowie das Design, das wir Ihnen anbieten können.</p>
-                        <a href="#" class="btn">Projekt ansehen</a>
+                        <h3>My Work</h3><BR>
+                        <p>Please log in to access this content, as certain areas are reserved for registered users to ensure privacy and security, provide a personalized experience, and unlock exclusive features<BR><BR>if you don't have an account yet, you can easily register to get started.</p>
+                        <BR><a href="#" class="btn">Projekt ansehen</a>
                     </div>
                 </div>
             </div>
@@ -419,7 +419,7 @@
     <!-- Contact Section -->
     <section id="contact" class="section contact">
         <div class="container">
-            <h2 class="section-title">Kontaktieren Sie mich</h2>
+            <h2 class="section-title">Contact me</h2>
             <form class="contact-form">
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -430,7 +430,7 @@
                     <input type="email" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="message">Nachricht</label>
+                    <label for="message">Message</label>
                     <textarea id="message" name="message" required></textarea>
                 </div>
                 <button type="submit" class="btn">Send Message</button>
