--- a/index.html
+++ b/index.html
@@ -4,378 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Optimal Compass</title>
-    <style>
-        /* Reset and Base Styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            line-height: 1.6;
-            color: #333;
-            background-color: #f9f9f9;
-        }
-
-        /* Header Styles */
-        header {
-            background: #2c3e50;
-            color: white;
-            padding: 1rem 0;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 100;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-
-        .logo a {
-            color: white;
-            text-decoration: none;
-        }
-
-        .nav-links {
-            display: flex;
-            list-style: none;
-        }
-
-        .nav-links li {
-            margin-left: 2rem;
-        }
-
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .nav-links a:hover {
-            color: #3498db;
-        }
-
-        /* Language Switcher */
-        .language-switcher {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 1000;
-            background: #2c3e50;
-            border-radius: 50px;
-            padding: 5px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-            display: flex;
-        }
-
-        .language-switcher button {
-            background: transparent;
-            border: none;
-            color: white;
-            padding: 8px 15px;
-            border-radius: 50px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: all 0.3s;
-            font-size: 14px;
-        }
-
-        .language-switcher button.active {
-            background: #3498db;
-        }
-
-        .language-switcher button:hover {
-            background: #3498db;
-        }
-
-        /* Hero Section */
-        .hero {
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
-            background-size: cover;
-            background-position: center;
-            color: white;
-            text-align: center;
-            padding-top: 70px; /* Added to account for fixed header */
-        }
-
-        .hero-content {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        .hero h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
-
-        .hero p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-        }
-
-        .btn {
-            display: inline-block;
-            background: #3498db;
-            color: white;
-            padding: 0.8rem 1.5rem;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 1rem;
-            transition: background 0.3s;
-        }
-
-        .btn:hover {
-            background: #2980b9;
-        }
-
-        /* About Section */
-        .section {
-            padding: 5rem 0;
-        }
-
-        .section-title {
-            text-align: center;
-            margin-bottom: 3rem;
-            font-size: 2.5rem;
-        }
-
-        .about-content {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .about-text {
-            flex: 1;
-            min-width: 300px;
-            padding-right: 2rem;
-        }
-
-        .about-image {
-            flex: 1;
-            min-width: 300px;
-            text-align: center;
-        }
-
-        .about-image img {
-            max-width: 100%;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-        }
-
-        /* Skills Section */
-        .skills {
-            background: #ecf0f1;
-        }
-
-        .skills-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-
-        .skill {
-            flex: 1 1 200px;
-            margin: 1rem;
-            padding: 1.5rem;
-            background: white;
-            border-radius: 5px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-            text-align: center;
-        }
-
-        .skill i {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            color: #3498db;
-        }
-
-        /* Projects Section */
-        .projects-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 2rem;
-        }
-
-        .project {
-            background: white;
-            border-radius: 5px;
-            overflow: hidden;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
-        }
-
-        .project:hover {
-            transform: translateY(-10px);
-        }
-
-        .project img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .project-info {
-            padding: 1.5rem;
-        }
-
-        /* Contact Section */
-        .contact {
-            background: #2c3e50;
-            color: white;
-        }
-
-        .contact-form {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 0.8rem;
-            border: none;
-            border-radius: 5px;
-        }
-
-        .form-group textarea {
-            height: 150px;
-        }
-
-        /* Footer */
-        footer {
-            background: #1a252f;
-            color: white;
-            text-align: center;
-            padding: 2rem 0;
-        }
-
-        .social-links {
-            margin: 1rem 0;
-        }
-
-        .social-links a {
-            color: white;
-            margin: 0 0.5rem;
-            font-size: 1.5rem;
-            transition: color 0.3s;
-        }
-
-        .social-links a:hover {
-            color: #3498db;
-        }
-
-        /* Mobile Menu */
-        .menu-toggle {
-            display: none;
-            cursor: pointer;
-            color: white;
-            font-size: 1.5rem;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .nav-links {
-                position: fixed;
-                top: 70px;
-                left: -100%;
-                width: 100%;
-                height: calc(100vh - 70px);
-                background: #2c3e50;
-                flex-direction: column;
-                align-items: center;
-                padding: 2rem 0;
-                transition: left 0.3s;
-            }
-
-            .nav-links.active {
-                left: 0;
-            }
-
-            .nav-links li {
-                margin: 1rem 0;
-            }
-
-            .menu-toggle {
-                display: block;
-            }
-
-            .hero h1 {
-                font-size: 2.5rem;
-            }
-
-            .about-content {
-                flex-direction: column;
-            }
-
-            .about-text {
-                padding-right: 0;
-                margin-bottom: 2rem;
-            }
-
-            .language-switcher {
-                bottom: 70px; /* Adjusted to not interfere with mobile menu */
-                right: 10px;
-            }
-
-            .language-switcher button {
-                padding: 6px 12px;
-                font-size: 12px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .hero h1 {
-                font-size: 2rem;
-            }
-
-            .hero p {
-                font-size: 1rem;
-            }
-
-            .section-title {
-                font-size: 2rem;
-            }
-
-            .language-switcher {
-                bottom: 60px;
-            }
-        }
-    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
@@ -519,7 +149,7 @@
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
-            <p data-i18n="footer_text">Made by Gift Anthony &copy; 2025</p>
+            <p data-i18n="footer_text">Made by Gift Anthony © 2025</p>
         </div>
     </footer>
 
@@ -529,138 +159,6 @@
         <button data-lang="de">DE</button>
     </div>
 
-    <!-- JavaScript -->
-    <script>
-        // Language translations
-        const translations = {
-            en: {
-                home: "Home",
-                about: "About Me",
-                skills: "Skills",
-                projects: "Projects",
-                contact: "Contact",
-                hero_title: "Simple Portfolio",
-                hero_text: "Over 10 years of experience in Product Ownership, Business Analysis, and SEO – my current focus: AI-powered solutions.",
-                view_work: "View my work",
-                about_title: "About me",
-                about_subtitle: "As part of my retraining, I am creating a simple portfolio website.",
-                about_text1: "With over 10 years of experience in <b>Product Ownership</b> and <b>Business Analysis</b>, I help companies strategically develop digital products. I connect user needs with clear business requirements and ensure that products are developed efficiently and purposefully.",
-                about_text2: "My current focus is on integrating <b>AI-powered approaches</b> to make products smarter and optimize processes.",
-                about_text3: "Additionally, I bring extensive expertise in <b>SEO management</b> to enhance digital visibility and create sustainable value.",
-                skills_title: "My Skills",
-                skill1_title: "HTML5 / CSS3",
-                skill1_text: "Structure, Function, Design",
-                skill2_title: "Jira & more",
-                skill2_text: "Project management tool",
-                skill3_title: "JavaScript",
-                skill3_text: "Interactive Web Development",
-                skill4_title: "Python / Pycharm",
-                skill4_text: "AI-powered solutions & API",
-                projects_title: "My Projects",
-                project1_title: "Product Owner",
-                project1_text: "I analyze requirements, define the product vision, and prioritize the backlog to maximize product value. Through close collaboration with stakeholders and cross-functional teams, I ensure the product meets market needs.<br><br>Using agile methodologies and data-driven decisions, I consistently strive to create added value for the company.",
-                project2_title: "Website & E-Commerce",
-                project2_text: "Complete modern website and e-commerce solutions, both frontend and backend, including ERP integration<br><br>We offer intelligent AI automation that efficiently optimizes business processes and future-proofs your company. With tailored solutions, we enhance user experience and improve performance.",
-                project3_title: "My Work",
-                project3_text: "Please log in to access this content, as certain areas are reserved for registered users to ensure privacy and security, provide a personalized experience, and unlock exclusive features<BR><BR>if you don't have an account yet, you can easily register to get started.",
-                view_project: "View Project",
-                contact_title: "Contact me",
-                name_label: "Name",
-                email_label: "Email",
-                message_label: "Message",
-                send_button: "Send Message",
-                footer_text: "Made by Gift Anthony &copy; 2025"
-            },
-            de: {
-                home: "Startseite",
-                about: "Über mich",
-                skills: "Fähigkeiten",
-                projects: "Projekte",
-                contact: "Kontakt",
-                hero_title: "Einfaches Portfolio",
-                hero_text: "Über 10 Jahre Erfahrung in Produktmanagement, Business Analyse und SEO – mein aktueller Fokus: KI-gestützte Lösungen.",
-                view_work: "Meine Arbeit ansehen",
-                about_title: "Über mich",
-                about_subtitle: "Im Rahmen meiner Umschulung erstelle ich eine einfache Portfolio-Website.",
-                about_text1: "Mit über 10 Jahren Erfahrung in <b>Produktmanagement</b> und <b>Business Analyse</b> unterstütze ich Unternehmen bei der strategischen Entwicklung digitaler Produkte. Ich verbinde Benutzerbedürfnisse mit klaren Geschäftsanforderungen und stelle sicher, dass Produkte effizient und zielgerichtet entwickelt werden.",
-                about_text2: "Mein aktueller Fokus liegt auf der Integration <b>KI-gestützter Ansätze</b>, um Produkte intelligenter zu machen und Prozesse zu optimieren.",
-                about_text3: "Zusätzlich bringe ich umfangreiche Expertise im <b>SEO-Management</b> mit, um die digitale Sichtbarkeit zu verbessern und nachhaltigen Wert zu schaffen.",
-                skills_title: "Meine Fähigkeiten",
-                skill1_title: "HTML5 / CSS3",
-                skill1_text: "Struktur, Funktion, Design",
-                skill2_title: "Jira & mehr",
-                skill2_text: "Projektmanagement-Tool",
-                skill3_title: "JavaScript",
-                skill3_text: "Interaktive Webentwicklung",
-                skill4_title: "Python / Pycharm",
-                skill4_text: "KI-gestützte Lösungen & API",
-                projects_title: "Meine Projekte",
-                project1_title: "Produktmanager",
-                project1_text: "Ich analysiere Anforderungen, definiere die Produktvision und priorisiere das Backlog, um den Produktwert zu maximieren. Durch enge Zusammenarbeit mit Stakeholdern und cross-funktionalen Teams stelle ich sicher, dass das Produkt den Marktanforderungen entspricht.<br><br>Mit agilen Methoden und datengesteuerten Entscheidungen strebe ich konsequent danach, Mehrwert für das Unternehmen zu schaffen.",
-                project2_title: "Website & E-Commerce",
-                project2_text: "Komplette moderne Website- und E-Commerce-Lösungen, sowohl Frontend als auch Backend, einschließlich ERP-Integration<br><br>Wir bieten intelligente KI-Automatisierung, die Geschäftsprozesse effizient optimiert und Ihr Unternehmen zukunftssicher macht. Mit maßgeschneiderten Lösungen verbessern wir die Benutzererfahrung und die Leistung.",
-                project3_title: "Meine Arbeit",
-                project3_text: "Bitte loggen Sie sich ein, um auf diesen Inhalt zuzugreifen, da bestimmte Bereiche registrierten Benutzern vorbehalten sind, um Datenschutz und Sicherheit zu gewährleisten, ein personalisiertes Erlebnis zu bieten und exklusive Funktionen freizuschalten.<BR><BR>Wenn Sie noch kein Konto haben, können Sie sich einfach registrieren, um loszulegen.",
-                view_project: "Projekt ansehen",
-                contact_title: "Kontaktieren Sie mich",
-                name_label: "Name",
-                email_label: "E-Mail",
-                message_label: "Nachricht",
-                send_button: "Nachricht senden",
-                footer_text: "Erstellt von Gift Anthony &copy; 2025"
-            }
-        };
-
-        // Language switching functionality
-        document.querySelectorAll('.language-switcher button').forEach(button => {
-            button.addEventListener('click', function() {
-                const lang = this.getAttribute('data-lang');
-                document.querySelector('.language-switcher button.active').classList.remove('active');
-                this.classList.add('active');
-                changeLanguage(lang);
-            });
-        });
-
-        function changeLanguage(lang) {
-            document.querySelectorAll('[data-i18n]').forEach(element => {
-                const key = element.getAttribute('data-i18n');
-                if (translations[lang][key]) {
-                    if (element.innerHTML.includes('<b>') || element.innerHTML.includes('<u>')) {
-                        // Preserve HTML tags
-                        const temp = document.createElement('div');
-                        temp.innerHTML = translations[lang][key];
-                        element.innerHTML = temp.innerHTML;
-                    } else {
-                        element.textContent = translations[lang][key];
-                    }
-                }
-            });
-        }
-
-        // Mobile menu toggle
-        const menuToggle = document.querySelector('.menu-toggle');
-        const navLinks = document.querySelector('.nav-links');
-
-        menuToggle.addEventListener('click', () => {
-            navLinks.classList.toggle('active');
-        });
-
-        // Close mobile menu when clicking on a link
-        document.querySelectorAll('.nav-links a').forEach(link => {
-            link.addEventListener('click', () => {
-                navLinks.classList.remove('active');
-            });
-        });
-
-        // Smooth scrolling for anchor links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
