--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1 data-i18n="hero_title">Simple Portfolio</h1>
-            <p data-i18n="hero_text">Over 10 years of experience in Product Ownership, Business Analysis, and SEO – my current focus: AI-powered solutions.</p>
+            <p data-i18n="hero_text">Over 10 years of experience in Product Ownership within E-Commerce, and SEO – my current focus: AI-powered solutions.</p>
             <a href="#projects" class="btn" data-i18n="view_work">View my work</a>
         </div>
     </section>
@@ -43,9 +43,9 @@
             <div class="about-content">
                 <div class="about-text">
                     <p><u><b data-i18n="about_subtitle">As part of my retraining, I am creating a simple portfolio website.</b></u></p>
-                    <BR>
-                    <p data-i18n="about_text1">With over 10 years of experience in <b>Product Ownership</b> and <b>Business Analysis</b>, I help companies strategically develop digital products. I connect user needs with clear business requirements and ensure that products are developed efficiently and purposefully.</p>
-                    <BR>
+                    <br>
+                    <p data-i18n="about_text1">With over 10 years of experience in <b>Product Ownership</b> within <b>E-Commerce</b>, I help companies strategically develop digital products. I connect user needs with clear business requirements and ensure that products are developed efficiently and purposefully.</p>
+                    <br>
                     <p data-i18n="about_text2">My current focus is on integrating <b>AI-powered approaches</b> to make products smarter and optimize processes.</p>
                     <p data-i18n="about_text3">Additionally, I bring extensive expertise in <b>SEO management</b> to enhance digital visibility and create sustainable value.</p>
                 </div>
@@ -93,25 +93,25 @@
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 1">
                     <div class="project-info">
-                        <h3 data-i18n="project1_title">Product Owner</h3><BR>
-                        <p data-i18n="project1_text">I analyze requirements, define the product vision, and prioritize the backlog to maximize product value. Through close collaboration with stakeholders and cross-functional teams, I ensure the product meets market needs.<br><br>Using agile methodologies and data-driven decisions, I consistently strive to create added value for the company.</p><BR>
+                        <h3 data-i18n="project1_title">Product Owner</h3><br>
+                        <p data-i18n="project1_text">I analyze requirements, define the product vision, and prioritize the backlog to maximize product value. Through close collaboration with stakeholders and cross-functional teams, I ensure the product meets market needs.<br><br>Using agile methodologies and data-driven decisions, I consistently strive to create added value for the company.</p><br>
                         <a href="#" class="btn" data-i18n="view_project">View Project</a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 2">
                     <div class="project-info">
-                        <h3 data-i18n="project2_title">Website & E-Commerce</h3><BR>
+                        <h3 data-i18n="project2_title">Website & E-Commerce</h3><br>
                         <p data-i18n="project2_text">Complete modern website and e-commerce solutions, both frontend and backend, including ERP integration<br><br>We offer intelligent AI automation that efficiently optimizes business processes and future-proofs your company. With tailored solutions, we enhance user experience and improve performance.</p>
-                        <BR><a href="#" class="btn" data-i18n="view_project">View Project</a>
+                        <br><a href="#" class="btn" data-i18n="view_project">View Project</a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1559028012-481c04fa702d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 3">
                     <div class="project-info">
-                        <h3 data-i18n="project3_title">My Work</h3><BR>
-                        <p data-i18n="project3_text">Please log in to access this content, as certain areas are reserved for registered users to ensure privacy and security, provide a personalized experience, and unlock exclusive features<BR><BR>if you don't have an account yet, you can easily register to get started.</p>
-                        <BR><a href="#" class="btn" data-i18n="view_project">View Project</a>
+                        <h3 data-i18n="project3_title">My Work</h3><br>
+                        <p data-i18n="project3_text">Please log in to access this content, as certain areas are reserved for registered users to ensure privacy and security, provide a personalized experience, and unlock exclusive features<br><br>if you don't have an account yet, you can easily register to get started.</p>
+                        <br><a href="#" class="btn" data-i18n="view_project">View Project</a>
                     </div>
                 </div>
             </div>
@@ -155,8 +155,8 @@
 
     <!-- Language Switcher -->
     <div class="language-switcher">
-        <button class="active" data-lang="en">EN</button>
-        <button data-lang="de">DE</button>
+        <button class="active" onclick="changeLanguage('en')" data-lang="en">EN</button>
+        <button onclick="changeLanguage('de')" data-lang="de">DE</button>
     </div>
 
     <script src="script.js"></script>
