--- a/index.html
+++ b/index.html
@@ -144,10 +144,9 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/HerrNeRd" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/gift-anthony-272754112/"><i class="fab fa-linkedin"></i></a>
+
             </div>
             <p data-i18n="footer_text">Made by Gift Anthony © 2025</p>
         </div>
