--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Optimal Compass</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header -->
+    <!-- Header with Language Switcher -->
     <header>
         <div class="container">
             <nav>
@@ -19,6 +20,10 @@
                     <li><a href="#skills" data-i18n="skills">Skills</a></li>
                     <li><a href="#projects" data-i18n="projects">Projects</a></li>
                     <li><a href="#contact" data-i18n="contact">Contact</a></li>
+                    <li class="language-switcher">
+                        <button class="active" data-lang="en"><span class="flag-icon flag-icon-gb"></span></button>
+                        <button data-lang="de"><span class="flag-icon flag-icon-de"></span></button>
+                    </li>
                 </ul>
                 <div class="menu-toggle">
                     <i class="fas fa-bars"></i>
@@ -44,13 +49,12 @@
                 <div class="about-text">
                     <p><u><b data-i18n="about_subtitle">As part of my retraining, I am creating a simple portfolio website.</b></u></p>
                     <br>
-                    <p data-i18n="about_text1">With over 10 years of experience in <b>Product Ownership</b> within <b>E-Commerce</b>, I help companies strategically develop digital products. I connect user needs with clear business requirements and ensure that products are developed efficiently and purposefully.</p>
+                    <p data-i18n="about_text1">With over 10 years of experience in <b>Product Ownership</b> within <b>E-Commerce</b>, I help companies strategically develop digital products.</p>
                     <br>
-                    <p data-i18n="about_text2">My current focus is on integrating <b>AI-powered approaches</b> to make products smarter and optimize processes.</p>
-                    <p data-i18n="about_text3">Additionally, I bring extensive expertise in <b>SEO management</b> to enhance digital visibility and create sustainable value.</p>
+                    <p data-i18n="about_text2">My current focus is on integrating <b>AI-powered approaches</b> to make products smarter. Additionally, I bring extensive expertise in <b>SEO management</b> to enhance digital visibility.</p>
                 </div>
                 <div class="about-image">
-                    <img src="https://i.imgur.com/w5td7rA.jpeg" alt="Profile" width="300" height="385">
+                    <img src="https://i.imgur.com/w5td7rA.jpeg" alt="Profile">
                 </div>
             </div>
         </div>
@@ -93,25 +97,25 @@
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 1">
                     <div class="project-info">
-                        <h3 data-i18n="project1_title">Product Owner</h3><br>
-                        <p data-i18n="project1_text">I analyze requirements, define the product vision, and prioritize the backlog to maximize product value. Through close collaboration with stakeholders and cross-functional teams, I ensure the product meets market needs.<br><br>Using agile methodologies and data-driven decisions, I consistently strive to create added value for the company.</p><br>
+                        <h3 data-i18n="project1_title">Product Owner</h3>
+                        <p data-i18n="project1_text">I analyze requirements and prioritize the backlog. Through collaboration, I ensure the product meets market needs.</p>
                         <a href="#" class="btn" data-i18n="view_project">View Project</a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 2">
                     <div class="project-info">
-                        <h3 data-i18n="project2_title">Website & E-Commerce</h3><br>
-                        <p data-i18n="project2_text">Complete modern website and e-commerce solutions, both frontend and backend, including ERP integration<br><br>We offer intelligent AI automation that efficiently optimizes business processes and future-proofs your company. With tailored solutions, we enhance user experience and improve performance.</p>
-                        <br><a href="#" class="btn" data-i18n="view_project">View Project</a>
+                        <h3 data-i18n="project2_title">Website & E-Commerce</h3>
+                        <p data-i18n="project2_text">Complete modern website solutions. We offer intelligent automation that optimizes business processes.</p>
+                        <a href="#" class="btn" data-i18n="view_project">View Project</a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="https://images.unsplash.com/photo-1559028012-481c04fa702d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 3">
                     <div class="project-info">
-                        <h3 data-i18n="project3_title">My Work</h3><br>
-                        <p data-i18n="project3_text">Please log in to access this content, as certain areas are reserved for registered users to ensure privacy and security, provide a personalized experience, and unlock exclusive features<br><br>if you don't have an account yet, you can easily register to get started.</p>
-                        <br><a href="#" class="btn" data-i18n="view_project">View Project</a>
+                        <h3 data-i18n="project3_title">My Work</h3>
+                        <p data-i18n="project3_text">Please log in to access this content. Certain areas are reserved for registered users.</p>
+                        <a href="#" class="btn" data-i18n="view_project">View Project</a>
                     </div>
                 </div>
             </div>
@@ -146,17 +150,10 @@
             <div class="social-links">
                 <a href="https://www.facebook.com/HerrNeRd" target="_blank"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.linkedin.com/in/gift-anthony-272754112/"><i class="fab fa-linkedin"></i></a>
-
             </div>
             <p data-i18n="footer_text">Made by Gift Anthony © 2025</p>
         </div>
     </footer>
-
-    <!-- Language Switcher -->
-    <div class="language-switcher">
-        <button class="active" onclick="changeLanguage('en')" data-lang="en">EN</button>
-        <button onclick="changeLanguage('de')" data-lang="de">DE</button>
-    </div>
 
     <script src="script.js"></script>
 </body>
